--- a/src/App.css
+++ b/src/App.css
@@ -235,7 +235,7 @@ wt-dialog {
   --wt-static-overlay-text-secondary: rgba(255, 255, 255, 0.7);
   --wt-static-overlay-text-disabled: rgba(255, 255, 255, 0.3);
 
-  --player-control-time-text: #ddd;
+  --player-control-time-text: #fff;
 
   --setting-button-hover: rgb(50, 65, 82);
   --icon-disabled: #606060;
