Refactor : StudioPage.jsx 구성 리팩토링 - StudioContent 내부 Sidebar StudioDashboard StudioInnerContent 로 구성

--- a/src/components/Sidebar/StudioSidebar.scss
+++ b/src/components/Sidebar/StudioSidebar.scss
@@ -4,6 +4,7 @@ wt-side-st.wt-page {
     flex: none;
     background-color: var(--wt-brand-background-solid);
     padding-top: 64px;
+    width: var(--app-drawer-width, 256px);
     height: 872px;
 }
 
