--- a/src/components/StudioContent/StudioDashboard.scss
+++ b/src/components/StudioContent/StudioDashboard.scss
@@ -1,8 +1,11 @@
 @import '../../styles/common.scss';
 
 .StudioMain_Container {
-    margin-left: 256px;
+    font-family: "YouTube Sans", "Roboto", "Arial", sans-serif;
+    left: 256px;
+    top: 64px;
     color: white;
+
     padding-top: 66px;
     font-size: 14px;
     box-sizing: border-box;
@@ -34,8 +37,18 @@
             right: 0px;
             font-size: 20px;
 
+
             .setting {
-                padding: 0 0 5px 5px;
+                margin-left: 5px;
+                padding: 8px;
+                background-color: #282828;
+                border-radius: 50%;
+                width: 24px;
+                height: 24px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
             }
         }
 
@@ -65,7 +78,7 @@
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 0.2rem;
             background-color: #282828;
-            width: 100%;
+
             height: 100%;
 
 
@@ -138,7 +151,7 @@
         .released_video {
             display: flex;
             flex-direction: column;
-            width: 100%;
+
             padding: 23px;
             border: solid 1px white;
             margin-top: 20px;
@@ -185,9 +198,10 @@
                                 display: flex;
                                 flex-direction: row;
                                 color: #AAAAAA;
+                                margin-top: 8px;
 
                                 .part {
-                                    margin-right: 8px;
+                                    margin-right: 18px;
                                 }
                             }
                         }
