--- a/src/App.css
+++ b/src/App.css
@@ -829,10 +829,6 @@ wtd-section-list-render {
   margin-left: 90px;
 }
 
-wtd-item-section-render {
-  display: block;
-}
-
 wtd-self-render {
   display: flex;
   flex-direction: column;
@@ -858,5 +854,38 @@ wtd-grid-video-render {
   --yt-shorts-compact-label-text-hidden: none;
   display: inline-block;
   width: 210px;
+  position: relative;
+}
+
+wtd-search {
+  padding: 16px 24px;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  z-index: 0;
+  flex: 1;
+  flex-basis: 1e-9px;
+  top: 60px;
+  left: 250px;
+  width: 1424px;
+}
+
+wtd-search-list-render {
+  min-width: 0;
+  display: flex;
+  flex-direction: column;
+  width: 1096px;
+}
+
+wtd-search-sub-menu-render {
+  display: block;
+}
+
+wtd-video-render {
+  --yt-button-compact-background-color: var(--white-alpha-10);
+  --yt-button-compact-text-color: var(--text-secondary);
+  display: block;
   position: relative;
 }
